--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Advanced Javascript</h1>
-    <script src="./index.js"></script>
+    <!-- <script src="./index.js"></script> -->
+    <script src="./super.js"></script>
 </body>
 </html>
