--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Advanced Javascript</h1>
     <!-- <script src="./index.js"></script> -->
-    <script src="./super.js"></script>
+    <script src="./practice1.js"></script>
+    <!-- <script src="./super.js"></script> -->
 </body>
 </html>
