--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Advanced Javascript</h1>
     <!-- <script src="./index.js"></script> -->
-    <script src="./practice2.js"></script>
+    <!-- <script src="./practice2.js"></script> -->
+    <script src="./getterAndSetter.js"></script>
     <!-- <script src="./super.js"></script> -->
 </body>
 </html>
