--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Advanced Javascript</h1>
     <!-- <script src="./index.js"></script> -->
     <!-- <script src="./practice2.js"></script> -->
-    <script src="./getterAndSetter.js"></script>
+    <script src="./practiceOOPNew.js"></script>
     <!-- <script src="./super.js"></script> -->
 </body>
 </html>
