call, bind and apply

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advanced Javascript</title>
+    <button id="clickMe">Click me</button>
 </head>
 <body>
     <h1>Advanced Javascript</h1>
@@ -11,6 +12,6 @@
     <!-- <script src="./practice2.js"></script> -->
     <!-- <script src="./practiceOOPNew.js"></script> -->
     <!-- <script src="./super.js"></script> -->
-    <script src="./this.js"></script>
+    <script src="./bind.js"></script>
 </body>
 </html>
