--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <!-- <script src="./practice2.js"></script> -->
     <!-- <script src="./practiceOOPNew.js"></script> -->
     <!-- <script src="./super.js"></script> -->
-    <script src="./bind.js"></script>
+    <script src="./practiceWithThis.js"></script>
 </body>
 </html>
